tests/NormalTests/paczka2/big_fuzzy/26953193.err
Error in line 8: 8bir8ilS A876 100,0
Error in line 9: 8bir8ilS A887 98,9
Error in line 11: 8bir8ilS S983 23,0
Error in line 13: oFdWS5GgN A887 39,1
Error in line 22: 0beWs S983 11,9
Error in line 21: Sir9nb667sJ A887 67,8
Error in line 17: oFdWS5GgN S983 39,0
Error in line 33: Sir9nb667sJ A887 81,4
Error in line 61: oFdWS5GgN S983 21,8
Error in line 68: A887 A887 69,1
Error in line 69: Sir9nb667sJ S307 47,8
Error in line 64: oFdWS5GgN S307 19,5
Error in line 75: Sir9nb667sJ A876 8,4
Error in line 80: Sir9nb667sJ S307 9,4
Error in line 85: 0beWs S983 39,6
Error in line 101: HhKSaSvAxmc S983 8,2
Error in line 99: 0beWs S307 38,7
Error in line 109: S9PHo S983 81,2
Error in line 107: HhKSaSvAxmc A876 85,5
Error in line 110: 0beWs S983 27,0
Error in line 115: S9PHo A887 14,2
Error in line 130: S9PHo S9F3 47,F
Error in line 133: Sir9nb667sJ S307 92,0
Error in line 145: A887 A887 199,9
Error in line 157: _
Error in line 148: S9PHo S983 82,9
Error in line 163: Sir9nb667sJ A876 92,7
Error in line 170: 0beWs A887 70,6
Error in line 178: oFdWS5GgN S983 11,3
Error in line 186: 8bir8ilS S983 81,1
Error in line 175: A887 S307 108,8
Error in line 197: A887 S983 45,3
Error in line 192: oFdWS5GgN A876 16,2
Error in line 199: HhKSaSvAxmc S983 97,1
Error in line 191: Sir9nb667sJ A876 70,8
Error in line 203: HhKSaSvAxmc A887 27,2
Error in line 201: oFdWS5GgN S983 54,4
Error in line 209: A887 A876 78,0
Error in line 229: 0beWs A876 81,8
Error in line 196: S9PHo S307 78,7
Error in line 232: S9PHo S983 61,4
Error in line 231: 0beWs S983 54,0
Error in line 230: 8bir8ilS S983 39,7
Error in line 235: S9PHo A887 20,1
Error in line 234: A887 S983 55,2
Error in line 245: oFdWS5GgN S307 60,2
